--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+  <head lang="en">
     <meta charset="UTF-8">
-    <title>webpack-commonJs-demo</title>
-    <script type="text/javascript" src="dist/bundle.js" charset="utf-8"></script>
-</head>
-<body>
-<h1>webpack-commonJs-demo</h1>
-</body>
+    <title>
+      Repro code splitting issue
+    </title>
+    <script type="text/javascript" src="dist/bundle.js" charset="utf-8">
+    </script>
+  </head>
+  <body>
+    <button onclick="firstButton()">First Button</button>
+    <button onclick="secondButton()">Second Button</button>
+  </body>
 </html>
